Spacing fixes

--- a/assets/sass/pages/_home_slide_styles.scss
+++ b/assets/sass/pages/_home_slide_styles.scss
@@ -1,7 +1,7 @@
 #home {
   transition: background-color 1s;
   .scroll-page {
-    padding: 15vh 5vw 5vh;
+    padding: 20vh 5vw 5vh;
     position:fixed;
     width:100%;
     height: 100vh;
@@ -86,6 +86,14 @@
 //   }
 // }
 
+//XL BREAK STYLE
+@media (min-width: 1600px) {
+  #home {
+    .scroll-page {
+        padding: 25vh 5vw 5vh;
+    }
+  }
+}
 
 //XS BREAK STYLE
 @media (max-width: 767px) {
